--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,11 @@ allprojects {
         mavenCentral()
     }
 }
+dependencies {
+  
+  classpath "com.google.gms.google-services4.4.2" 
 
+}
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
