--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,3 +56,11 @@ android {
 flutter {
     source = "../.."
 }
+dependencies {
+    implementation 'com.google.firebase:firebase-analytics:22.0.0'
+    implementation 'com.google.firebase:firebase-auth:22.1.0'
+    implementation 'com.google.firebase:firebase-firestore:24.6.0' 
+    implementation "com.google.firebase:firebase-bom:33.1.2"
+}
+
+apply plugin: 'com.google.gms.google-services'
