--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   contacts_service: ^0.6.3
   permission_handler: ^11.3.1
   device_preview: ^1.2.0
+  firebase_core: ^3.3.0
+  firebase_analytics: ^11.2.1
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
