--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id "com.android.application"
+    // START: FlutterFire Configuration
+    id 'com.google.gms.google-services'
+    // END: FlutterFire Configuration
     id "kotlin-android"
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
@@ -56,11 +59,3 @@ android {
 flutter {
     source = "../.."
 }
-dependencies {
-    implementation 'com.google.firebase:firebase-analytics:22.0.0'
-    implementation 'com.google.firebase:firebase-auth:22.1.0'
-    implementation 'com.google.firebase:firebase-firestore:24.6.0' 
-    implementation "com.google.firebase:firebase-bom:33.1.2"
-}
-
-apply plugin: 'com.google.gms.google-services'
