--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_analytics: ^11.2.1
   cloud_firestore: ^5.2.1
+  firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
